--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
-    "typescript": "^5.9.3",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.1",
-    "@types/qrcode": "^1.5.6"
+    "@types/qrcode": "^1.5.6",
+    "typescript": "5.9.3"
   }
 }
